# RunwayDetection

./: README.md
Qt/head/: dialog.h  imagewidget.h  pnp_window.h  widget.h
Qt/source/: dialog.cpp  imagewidget.cpp  main.cpp  pnp_window.cpp  widget.cpp
Qt/ui/: dialog.ui  dialog_ui.py  imagewidget.ui  imagewidget_ui.py  pnp_project.pro  pnp_window.ui  pnp_window_ui.py  widget.ui  widget_ui.py
UFLDv2/: demo.py  demo_img.py  demo_img_onnx.py  demo_seg.py  demo_video.py  utils_lane.py
UFLDv2/configs/: tusimple_res18.py
UFLDv2/data/: constant.py  interpt.py  torch_dataloader.py  torch_dataset.py
UFLDv2/model/: attention.py  layer.py  model_culane.py  model_tusimple.py  seg_model.py
UFLDv2/utils/: common.py  config.py  convert_onnx.py  dist_utils.py  factory.py  loss.py  metrics.py  test.py
communication/: get_local_pose.py  plane_communication.py
control/: plane_keyboard_simple.py
cpp_acceleration/: CMakeLists.txt
cpp_acceleration/include/: lane_postprocess.h
cpp_acceleration/src/: lane_bind.cpp  lane_postprocess.cpp
launch/: outdoor2.launch  outdoor2.world  plane.sdf
runway_analysis_logs/: height_log_20260423_012234.csv
script/: Horizon_fast.py  IPM_func copy.py  IPM_func.py  KalmanFilter.py  PNP_entrance_final_func.py  RunwayDetector_for_single_onnx_fast.py  config.py  detect_img_fast.py  detect_img_ros_test.py  division_points.txt  estimate_math.py  ipm_transform_copy.py  main.py  main_test.py  main_test_state_machine_fast.py  pnp_test.py  sam_test.py  utils.py  utils_final.py  yolo_onnx.py
test/: predict_video.py  test.py
